<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wheresmybus.SubmitAlertActivity">

    <TextView
        android:text="@string/select_forum_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:id="@+id/type_buttons">

        <RadioButton
            android:text="@string/bus_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_bus_route"
            android:onClick="onRadioButtonClicked"
            android:buttonTint="@color/darkBlue" />

        <RadioButton
            android:text="@string/neighborhood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_neighborhood"
            android:onClick="onRadioButtonClicked"
            android:buttonTint="@color/darkBlue"
             />

    </RadioGroup>

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.wheresmybus.BusRouteAlertFragment"
        android:layout_below="@+id/type_buttons"
        android:id="@+id/bus_route_alert_fragment"
        tools:layout="@layout/fragment_bus_route_alert"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.wheresmybus.NeighborhoodAlertFragment"
        android:layout_below="@+id/type_buttons"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/neighborhood_alert_fragment"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:layout="@layout/fragment_neighborhood_alert"
        android:layout_alignBottom="@+id/bus_route_alert_fragment" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_submit"
        android:background="@color/green"
        android:textColor="@color/white"
        android:onClick="onSubmitButtonClicked"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/cancel_button"
        android:layout_toRightOf="@+id/cancel_button"/>

    <Button
        android:text="Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_button"
        android:background="@color/orange"
        android:textColor="@color/white"
        android:textStyle="normal|bold"
        android:onClick="switchToPreviousScreen"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>