<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.wheresmybus.NeighborhoodAlertFragment">

    <TextView
        android:text="@string/choose_neighborhood"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choose_neighborhood"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/neighborhood_spinner"
        android:layout_below="@+id/choose_neighborhood"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:isScrollContainer="true"
        android:prompt="@string/choose_neighborhood"
        android:spinnerMode="dialog"/>

    <TextView
        android:text="@string/check_alert_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/neighborhood_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/choose_neighborhood_alert_types"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <CheckBox
        android:text="@string/construction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox5"
        android:layout_below="@+id/choose_neighborhood_alert_types"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:buttonTint="@color/darkBlue"/>

    <CheckBox
        android:text="@string/event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox5"
        android:id="@+id/checkBox6"
        android:buttonTint="@color/darkBlue"/>

    <TextView
        android:text="@string/write_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/other_type_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/write_neighborhood_description_prompt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:inputType="textMultiLine"
        android:maxLength="140"
        android:hint="@string/long_characters_hint"
        android:ems="10"
        android:id="@+id/neighborhood_alert_description"
        android:isScrollContainer="true"
        android:textColor="@android:color/black"
        android:minLines="6"
        android:gravity="top|left"
        android:scrollbars="vertical"
        android:layout_below="@+id/write_neighborhood_description_prompt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:text="@string/other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox8"
        android:buttonTint="@color/darkBlue"
        android:layout_below="@+id/checkBox7"
        android:layout_alignLeft="@+id/checkBox7"
        android:layout_alignStart="@+id/checkBox7" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="30"
        android:hint="@string/other_type_hint"
        android:ems="10"
        android:id="@+id/other_type_description"
        android:isScrollContainer="true"
        android:textColor="@color/black"
        android:gravity="top|left"
        android:scrollbars="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/checkBox8" />

    <Button
        android:text="Select which route(s) may be affected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/select_routes_affected_button"
        android:layout_below="@+id/neighborhood_alert_description"
        android:layout_above="@+id/cancel_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/mediumBlue"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:onClick="openRouteDialog"/>

    <CheckBox
        android:text="@string/traffic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox7"
        android:buttonTint="@color/darkBlue"
        android:layout_marginLeft="67dp"
        android:layout_marginStart="67dp"
        android:layout_below="@+id/choose_neighborhood_alert_types"
        android:layout_toRightOf="@+id/checkBox5"
        android:layout_toEndOf="@+id/checkBox5" />

</RelativeLayout>
